# RGR_cryptografy

./: CMakeLists.txt  README.md  chacha20.cpp  chacha20.h  cipher_interface.h  file_handler.cpp  file_handler.h  key_generator.cpp  key_generator.h  magma.cpp  magma.h  main.cpp  trithemius.cpp  trithemius.h
